Fix menu on mobile.

--- a/www/themes/borg/css/components-menus.css
+++ b/www/themes/borg/css/components-menus.css
@@ -7,20 +7,25 @@
 /*******************************************************************************
  * Main menu - drop-open position for mobile
  ******************************************************************************/
-@media all and (max-width: 47.9375em) { /* 767px @ 16px font size  -- MD */
+.block-system-main-menu ul.menu {
+  position: absolute;
+  width: 275px;
+  top: 50px;
+  right: 30px;
+}
+
+@media (min-width: 34em) { /* 544px @ 16px font size -- SM */
   .block-system-main-menu ul.menu {
-    position: absolute;
-    right: 100px;
     top: 50px;
-    width: 250px;
+    right: 100px;
   }
 }
-@media all and (max-width: 33.9375em) { /* 543px @ 16px font size -- SM */
+@media (min-width: 48em) {  /* 768px @ 16px font size  -- MD */
   .block-system-main-menu ul.menu {
-    position: absolute;
-    right: 100px;
-    top: 50px;
-    width: 100vw;
+    position: relative;
+    width: auto;
+    top: 0;
+    right: 0;
   }
 }
 
